# ftss-0.9.3-apache_2.4.patch

./: README.md  ftss-0.9.3-apache_2.4.33.patch
ftss-0.9.3-patched/: AUTHORS  ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.ac
ftss-0.9.3-patched/src/: Makefile.am  Makefile.in  ftss.c
